[gd_scene load_steps=12 format=2]

[ext_resource path="res://MainNodes/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainNodes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Test/TestCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/HUDImages/ResourceBar.png" type="Texture" id=4]
[ext_resource path="res://MainNodes/SluglordsOfThrasMain.gd" type="Script" id=5]
[ext_resource path="res://HUD/PermanentHUD.gd" type="Script" id=6]
[ext_resource path="res://MainNodes/SloadFactionNode.tscn" type="PackedScene" id=7]
[ext_resource path="res://MainNodes/OwnedHexMenus.gd" type="Script" id=8]
[ext_resource path="res://HUD/Temp/BuildingDescription.tscn" type="PackedScene" id=9]
[ext_resource path="res://MainNodes/OwnedHexTabs.gd" type="Script" id=10]
[ext_resource path="res://MainNodes/BuildPanel.gd" type="Script" id=11]

[node name="Game" type="Node2D"]
script = ExtResource( 5 )
Faction = ExtResource( 7 )

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="Factions" type="Node2D" parent="."]

[node name="TestCamera" parent="." instance=ExtResource( 3 )]

[node name="HUDcanvas" type="CanvasLayer" parent="."]

[node name="PermanentHUD" type="Control" parent="HUDcanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlaceholderResourcePanel" type="TextureRect" parent="HUDcanvas/PermanentHUD"]
margin_right = 400.0
margin_bottom = 40.0
mouse_filter = 0
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GoldText" type="Label" parent="HUDcanvas/PermanentHUD/PlaceholderResourcePanel"]
margin_left = 35.0
margin_top = 12.0
margin_right = 95.0
margin_bottom = 26.0
text = "99999"

[node name="CorpsesText" type="Label" parent="HUDcanvas/PermanentHUD/PlaceholderResourcePanel"]
margin_left = 165.0
margin_top = 12.0
margin_right = 225.0
margin_bottom = 26.0
text = "99999"

[node name="ContagionText" type="Label" parent="HUDcanvas/PermanentHUD/PlaceholderResourcePanel"]
margin_left = 295.0
margin_top = 12.0
margin_right = 355.0
margin_bottom = 26.0
text = "99999"

[node name="PlaceholderTurnContainer" type="Panel" parent="HUDcanvas/PermanentHUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -118.0
margin_top = -89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUDcanvas/PermanentHUD/PlaceholderTurnContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 81.0
margin_bottom = 59.0
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnPanel" type="PanelContainer" parent="HUDcanvas/PermanentHUD/PlaceholderTurnContainer/VBoxContainer"]
margin_right = 74.0
margin_bottom = 28.0

[node name="HBoxContainer" type="HBoxContainer" parent="HUDcanvas/PermanentHUD/PlaceholderTurnContainer/VBoxContainer/TurnPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 67.0
margin_bottom = 21.0

[node name="Turn" type="Label" parent="HUDcanvas/PermanentHUD/PlaceholderTurnContainer/VBoxContainer/TurnPanel/HBoxContainer"]
margin_right = 32.0
margin_bottom = 14.0
text = "Turn:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnNum" type="Label" parent="HUDcanvas/PermanentHUD/PlaceholderTurnContainer/VBoxContainer/TurnPanel/HBoxContainer"]
margin_left = 36.0
margin_right = 44.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextTurnButton" type="Button" parent="HUDcanvas/PermanentHUD/PlaceholderTurnContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 74.0
margin_bottom = 62.0
text = "Next Turn"

[node name="ContextMenus" type="Control" parent="HUDcanvas"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
mouse_filter = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="OwnedHexMenus" type="Control" parent="HUDcanvas/ContextMenus"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OwnedHexTabs" type="TabContainer" parent="HUDcanvas/ContextMenus/OwnedHexMenus"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -350.0
margin_right = 250.0
margin_bottom = 3.05176e-05
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hex" type="Panel" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex"]
anchor_right = 1.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer"]
margin_right = 242.0
margin_bottom = 14.0
alignment = 1

[node name="HexIdentifier0" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 117.0
margin_bottom = 14.0
text = "Hex ("
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AxialX" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/HBoxContainer"]
margin_left = 121.0
margin_right = 129.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HexIdentifier1" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/HBoxContainer"]
margin_left = 133.0
margin_right = 137.0
margin_bottom = 14.0
text = ","
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AxialY" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/HBoxContainer"]
margin_left = 141.0
margin_right = 149.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HexIdentifier2" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/HBoxContainer"]
margin_left = 153.0
margin_right = 157.0
margin_bottom = 14.0
text = ")"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer"]
margin_top = 18.0
margin_right = 242.0
margin_bottom = 32.0
alignment = 1

[node name="IslandIdentifier" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/HBoxContainer2"]
margin_left = 77.0
margin_right = 132.0
margin_bottom = 14.0
text = "Island of"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IslandName" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/HBoxContainer2"]
margin_left = 136.0
margin_right = 164.0
margin_bottom = 14.0
text = "TEST"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer"]
margin_top = 36.0
margin_right = 242.0
margin_bottom = 40.0

[node name="ProductionTitle" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer"]
margin_top = 44.0
margin_right = 242.0
margin_bottom = 58.0
text = "Production:"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer"]
margin_top = 62.0
margin_right = 242.0
margin_bottom = 112.0

[node name="HBoxContainer" type="HBoxContainer" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/CenterContainer"]
margin_left = 71.0
margin_right = 170.0
margin_bottom = 50.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 71.0
margin_bottom = 50.0

[node name="Gold" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 71.0
margin_bottom = 14.0
text = "Gold:"

[node name="Corpses" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 71.0
margin_bottom = 32.0
text = "Corpses:"

[node name="Contagion" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 71.0
margin_bottom = 50.0
text = "Contagion: "

[node name="VBoxContainer2" type="VBoxContainer" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 75.0
margin_right = 99.0
margin_bottom = 50.0

[node name="GoldNum" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_right = 24.0
margin_bottom = 14.0
text = "999"

[node name="CorpsesNum" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 24.0
margin_bottom = 32.0
text = "999"

[node name="ContagionNum" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 24.0
margin_bottom = 50.0
text = "999"

[node name="HSeparator2" type="HSeparator" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer"]
margin_top = 116.0
margin_right = 242.0
margin_bottom = 120.0

[node name="BuildingTitle" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer"]
margin_top = 124.0
margin_right = 242.0
margin_bottom = 138.0
text = "Building:"
align = 1

[node name="BuildingName" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer"]
margin_top = 142.0
margin_right = 242.0
margin_bottom = 156.0
text = "BuildingTitle"
align = 1

[node name="VerboseDescription" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/VBoxContainer"]
margin_top = 160.0
margin_right = 242.0
margin_bottom = 225.0
text = "Verbose Description wordswordswordswordswordswordswordswordswordswordswordswords
"
autowrap = true

[node name="BuildButton" type="Button" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex"]
margin_left = 130.0
margin_top = 225.0
margin_right = 224.0
margin_bottom = 269.0
text = "Build"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnCountBox" type="HBoxContainer" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/BuildButton"]
margin_top = 50.0
margin_right = 79.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnCounter" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/BuildButton/TurnCountBox"]
margin_top = 12.0
margin_right = 67.0
margin_bottom = 26.0
text = "Turns Left:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnCountNum" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/BuildButton/TurnCountBox"]
margin_left = 71.0
margin_top = 12.0
margin_right = 87.0
margin_bottom = 26.0
text = "99"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShortDescription" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -83.0
margin_right = 123.0
margin_bottom = -1.0
text = "gold
corpses
contagion
short description etc etc etc etc e"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Island" type="Panel" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Island"]
anchor_right = 1.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Island/VBoxContainer"]
margin_right = 230.0
margin_bottom = 14.0
alignment = 1

[node name="IslandTitle" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Island/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 128.0
margin_bottom = 14.0
text = "Island Of"

[node name="IslandName" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Island/VBoxContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 160.0
margin_bottom = 14.0
text = "TEST"

[node name="HBoxContainer2" type="HBoxContainer" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Island/VBoxContainer"]
margin_top = 18.0
margin_right = 230.0
margin_bottom = 32.0
alignment = 1

[node name="SizeTitle" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Island/VBoxContainer/HBoxContainer2"]
margin_left = 94.0
margin_right = 124.0
margin_bottom = 14.0
text = "Size:"

[node name="SizeNum" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Island/VBoxContainer/HBoxContainer2"]
margin_left = 128.0
margin_right = 136.0
margin_bottom = 14.0
text = "7"

[node name="HBoxContainer3" type="HBoxContainer" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Island/VBoxContainer"]
margin_top = 36.0
margin_right = 230.0
margin_bottom = 50.0
alignment = 1

[node name="OwnerTitle" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Island/VBoxContainer/HBoxContainer3"]
margin_left = 69.0
margin_right = 115.0
margin_bottom = 14.0
text = "Owner:"

[node name="OwnerName" type="Label" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Island/VBoxContainer/HBoxContainer3"]
margin_left = 119.0
margin_right = 160.0
margin_bottom = 14.0
text = "K'arrot"

[node name="HSeparator" type="HSeparator" parent="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Island/VBoxContainer"]
margin_top = 54.0
margin_right = 230.0
margin_bottom = 58.0

[node name="BuildPanel" type="Panel" parent="HUDcanvas/ContextMenus/OwnedHexMenus"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 253.0
margin_top = -325.0
margin_right = 602.0
margin_bottom = -1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="HUDcanvas/ContextMenus/OwnedHexMenus/BuildPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ScrollVBox" type="VBoxContainer" parent="HUDcanvas/ContextMenus/OwnedHexMenus/BuildPanel/ScrollContainer"]
margin_right = 336.0
margin_bottom = 362.0

[node name="BuildingDescription" parent="HUDcanvas/ContextMenus/OwnedHexMenus/BuildPanel/ScrollContainer/ScrollVBox" instance=ExtResource( 9 )]
margin_bottom = 118.0
target = "Docks"

[node name="BuildingDescription2" parent="HUDcanvas/ContextMenus/OwnedHexMenus/BuildPanel/ScrollContainer/ScrollVBox" instance=ExtResource( 9 )]
margin_top = 122.0
margin_bottom = 240.0
target = "Osseorium"

[node name="BuildingDescription3" parent="HUDcanvas/ContextMenus/OwnedHexMenus/BuildPanel/ScrollContainer/ScrollVBox" instance=ExtResource( 9 )]
margin_top = 244.0
margin_bottom = 362.0
target = "Rot Farm"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background" parent="ParallaxBackground" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1999.54
margin_top = -3001.0
margin_right = 2000.46
margin_bottom = 2999.0
[connection signal="owned_hex_clicked" from="." to="HUDcanvas/ContextMenus/OwnedHexMenus" method="new_hex_selected"]
[connection signal="hex_clicked" from="Map/Hex" to="." method="_on_Hex_hex_clicked"]
[connection signal="pressed" from="HUDcanvas/PermanentHUD/PlaceholderTurnContainer/VBoxContainer/NextTurnButton" to="." method="_on_NextTurnButton_pressed"]
[connection signal="tab_changed" from="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs" to="HUDcanvas/ContextMenus/OwnedHexMenus" method="_on_OwnedHexTabs_tab_changed"]
[connection signal="pressed" from="HUDcanvas/ContextMenus/OwnedHexMenus/OwnedHexTabs/Hex/BuildButton" to="HUDcanvas/ContextMenus/OwnedHexMenus/BuildPanel" method="_on_BuildButton_pressed"]
[connection signal="build" from="HUDcanvas/ContextMenus/OwnedHexMenus/BuildPanel/ScrollContainer/ScrollVBox/BuildingDescription" to="HUDcanvas/ContextMenus/OwnedHexMenus" method="_on_build"]
[connection signal="build" from="HUDcanvas/ContextMenus/OwnedHexMenus/BuildPanel/ScrollContainer/ScrollVBox/BuildingDescription2" to="HUDcanvas/ContextMenus/OwnedHexMenus" method="_on_build"]
[connection signal="build" from="HUDcanvas/ContextMenus/OwnedHexMenus/BuildPanel/ScrollContainer/ScrollVBox/BuildingDescription3" to="HUDcanvas/ContextMenus/OwnedHexMenus" method="_on_build"]

[editable path="Map"]
